--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/tex/best_ENGD_per_layer.tex
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/tex/best_ENGD_per_layer.tex
@@ -1,1 +1,1 @@
-damping: 0, exponential moving average: $\num[scientific-notation=true]{0.9}$, initialize Gramian to identity: yes
+damping: $\num[scientific-notation=false]{0}$, exponential moving average: $\num[scientific-notation=true]{0.9}$, initialize Gramian to identity: $\text{yes}$
