--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/tex/best_HessianFree.tex
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/tex/best_HessianFree.tex
@@ -1,1 +1,1 @@
-curvature matrix: GGN, initial damping: 100, constant damping: no, maximum CG iterations: 50
+curvature matrix: $\text{GGN}$, initial damping: $\num[scientific-notation=false]{100}$, constant damping: $\text{no}$, maximum CG iterations: $\num[scientific-notation=false]{50}$
