--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/tex/best_LBFGS.tex
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/tex/best_LBFGS.tex
@@ -1,1 +1,1 @@
-learning rate: $\num[scientific-notation=true]{0.05}$, history size: 125
+learning rate: $\num[scientific-notation=true]{0.05}$, history size: $\num[scientific-notation=false]{125}$
