--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/tex/sweep_ENGD_full.tex
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/tex/sweep_ENGD_full.tex
@@ -1,1 +1,1 @@
-damping: $\mathcal{C}(\{\num[scientific-notation=true]{1e-08},\num[scientific-notation=true]{1e-09},\num[scientific-notation=true]{1e-10},\num[scientific-notation=true]{1e-11},\num[scientific-notation=true]{1e-12},0\})$, exponential moving average: $\mathcal{C}(\{0,\num[scientific-notation=true]{0.3},\num[scientific-notation=true]{0.6},\num[scientific-notation=true]{0.9}\})$, initialize Gramian to identity: $\mathcal{C}(\{\text{no},\text{yes}\})$
+damping: $\mathcal{C}(\{\num[scientific-notation=true]{1e-08},\num[scientific-notation=true]{1e-09},\num[scientific-notation=true]{1e-10},\num[scientific-notation=true]{1e-11},\num[scientific-notation=true]{1e-12},\num[scientific-notation=false]{0}\})$, exponential moving average: $\mathcal{C}(\{\num[scientific-notation=false]{0},\num[scientific-notation=true]{0.3},\num[scientific-notation=true]{0.6},\num[scientific-notation=true]{0.9}\})$, initialize Gramian to identity: $\mathcal{C}(\{\text{no},\text{yes}\})$
