--- a/kfac_pinns_exp/exp15_poisson2d_deepwide/tex/best_ENGD_diagonal.tex
+++ b/kfac_pinns_exp/exp15_poisson2d_deepwide/tex/best_ENGD_diagonal.tex
@@ -1,1 +1,1 @@
-damping: 0, exponential moving average: $\num[scientific-notation=true]{0.99}$, initialize Gramian to identity: no
+damping: $\num[scientific-notation=false]{0}$, exponential moving average: $\num[scientific-notation=true]{0.99}$, initialize Gramian to identity: $\text{no}$
