--- a/kfac_pinns_exp/exp15_poisson2d_deepwide/tex/sweep_ENGD_per_layer.tex
+++ b/kfac_pinns_exp/exp15_poisson2d_deepwide/tex/sweep_ENGD_per_layer.tex
@@ -1,1 +1,1 @@
-damping: $\mathcal{C}(\{\num[scientific-notation=true]{0.01},\num[scientific-notation=true]{0.001},\num[scientific-notation=true]{0.0001},\num[scientific-notation=true]{1e-05},\num[scientific-notation=true]{1e-06}\})$, exponential moving average: $\mathcal{C}(\{0,\num[scientific-notation=true]{0.3},\num[scientific-notation=true]{0.6},\num[scientific-notation=true]{0.9},\num[scientific-notation=true]{0.99}\})$, initialize Gramian to identity: $\mathcal{C}(\{\text{no},\text{yes}\})$
+damping: $\mathcal{C}(\{\num[scientific-notation=true]{0.01},\num[scientific-notation=true]{0.001},\num[scientific-notation=true]{0.0001},\num[scientific-notation=true]{1e-05},\num[scientific-notation=true]{1e-06}\})$, exponential moving average: $\mathcal{C}(\{\num[scientific-notation=false]{0},\num[scientific-notation=true]{0.3},\num[scientific-notation=true]{0.6},\num[scientific-notation=true]{0.9},\num[scientific-notation=true]{0.99}\})$, initialize Gramian to identity: $\mathcal{C}(\{\text{no},\text{yes}\})$
