--- a/kfac_pinns_exp/exp15_poisson2d_deepwide/tex/sweep_KFAC.tex
+++ b/kfac_pinns_exp/exp15_poisson2d_deepwide/tex/sweep_KFAC.tex
@@ -1,1 +1,1 @@
-damping: $\mathcal{LU}([\num[scientific-notation=true]{1e-13}; \num[scientific-notation=true]{1e-07}])$, momentum: $\mathcal{U}([0; \num[scientific-notation=true]{0.99}])$, exponential moving average: $\mathcal{U}([0; \num[scientific-notation=true]{0.99}])$, initialize Kronecker factors to identity: $\mathcal{C}(\{\text{no},\text{yes}\})$
+damping: $\mathcal{LU}([\num[scientific-notation=true]{1e-13}; \num[scientific-notation=true]{1e-07}])$, momentum: $\mathcal{U}([\num[scientific-notation=false]{0}; \num[scientific-notation=true]{0.99}])$, exponential moving average: $\mathcal{U}([\num[scientific-notation=false]{0}; \num[scientific-notation=true]{0.99}])$, initialize Kronecker factors to identity: $\mathcal{C}(\{\text{no},\text{yes}\})$
