--- a/kfac_pinns_exp/exp15_poisson2d_deepwide/tex/sweep_LBFGS.tex
+++ b/kfac_pinns_exp/exp15_poisson2d_deepwide/tex/sweep_LBFGS.tex
@@ -1,1 +1,1 @@
-learning rate: $\mathcal{C}(\{\num[scientific-notation=true]{0.5},\num[scientific-notation=true]{0.2},\num[scientific-notation=true]{0.1},\num[scientific-notation=true]{0.05},\num[scientific-notation=true]{0.02},\num[scientific-notation=true]{0.01}\})$, history size: $\mathcal{C}(\{50,75,100,125,150,175,200,225\})$
+learning rate: $\mathcal{C}(\{\num[scientific-notation=true]{0.5},\num[scientific-notation=true]{0.2},\num[scientific-notation=true]{0.1},\num[scientific-notation=true]{0.05},\num[scientific-notation=true]{0.02},\num[scientific-notation=true]{0.01}\})$, history size: $\mathcal{C}(\{\num[scientific-notation=false]{50},\num[scientific-notation=false]{75},\num[scientific-notation=false]{100},\num[scientific-notation=false]{125},\num[scientific-notation=false]{150},\num[scientific-notation=false]{175},\num[scientific-notation=false]{200},\num[scientific-notation=false]{225}\})$
