--- a/kfac_pinns_exp/exp16_poisson5d_deepwide/tex/best_HessianFree.tex
+++ b/kfac_pinns_exp/exp16_poisson5d_deepwide/tex/best_HessianFree.tex
@@ -1,1 +1,1 @@
-curvature matrix: $\text{GGN}$, initial damping: $\num[scientific-notation=true]{0.1}$, constant damping: $\text{no}$, maximum CG iterations: 250
+curvature matrix: $\text{GGN}$, initial damping: $\num[scientific-notation=true]{0.1}$, constant damping: $\text{no}$, maximum CG iterations: $\num[scientific-notation=false]{250}$
