--- a/kfac_pinns_exp/exp20_poisson2d_mlp_tanh_256/tex/best_HessianFree.tex
+++ b/kfac_pinns_exp/exp20_poisson2d_mlp_tanh_256/tex/best_HessianFree.tex
@@ -1,1 +1,1 @@
-curvature matrix: GGN, initial damping: 1, constant damping: no, maximum CG iterations: 250
+curvature matrix: $\text{GGN}$, initial damping: $\num[scientific-notation=false]{1}$, constant damping: $\text{no}$, maximum CG iterations: $\num[scientific-notation=false]{250}$
