[REF] Update author info, auto-format checklist [no ci]

--- a/paper/preamble/metadata.tex
+++ b/paper/preamble/metadata.tex
@@ -1,5 +1,5 @@
 \newcommand{\papertitle}{%
-  Kronecker-Factored Approximate Curvature for Physics-Informed Neural Networks 
+  Kronecker-Factored Approximate Curvature for Physics-Informed Neural Networks
 }
 \title{\papertitle}
 
@@ -12,12 +12,11 @@
 % \AND instead of \And before the third author name.
 
 \author{%
-  Felix Dangel\thanks{Equal contribution, correspondence to \url{some mail}.}\\
-  Vector Institute\\
-  661 University Ave. \\
+  Felix Dangel\thanks{Equal contribution}}\\
+  Vector Institute \\
+  108 College St. \\
   Toronto, Canada \\
   \texttt{fdangel@vectorinstitute.ai} \\
-  % examples of more authors
   \And
   Johannes M\"uller$^*$\\
   Department of Mathematics \\
@@ -29,7 +28,7 @@
   University Hospital \\
   University of Freiburg \\
   Freiburg, Germany \\
-  \texttt{mariusz@simula.no} 
+  \texttt{mariusz@simula.no}
 }
 %%% Local Variables:
 %%% mode: latex
