[FIX] Unbalanced parenthesis [no ci]

--- a/paper/preamble/metadata.tex
+++ b/paper/preamble/metadata.tex
@@ -12,7 +12,7 @@
 % \AND instead of \And before the third author name.
 
 \author{%
-  Felix Dangel\thanks{Equal contribution}}\\
+  Felix Dangel\thanks{Equal contribution}\\
   Vector Institute \\
   108 College St. \\
   Toronto, Canada \\
