[ADD] Bayesian best run formatter, update Bayesian plots [no ci]

--- a/kfac_pinns_exp/exp14_poisson_100d_weinan/tex/best_Adam.tex
+++ b/kfac_pinns_exp/exp14_poisson_100d_weinan/tex/best_Adam.tex
@@ -1,1 +1,1 @@
-learning rate: $\num[scientific-notation=true]{3.695903e-04}$
+learning rate: $\num[scientific-notation=true]{2.798405e-04}$, $N_{\Omega}$: $\num[scientific-notation=false]{418}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{957}$, batch sampling frequency: $\num[scientific-notation=false]{190}$
