--- a/kfac_pinns_exp/exp14_poisson_100d_weinan/tex/best_LBFGS.tex
+++ b/kfac_pinns_exp/exp14_poisson_100d_weinan/tex/best_LBFGS.tex
@@ -1,1 +1,1 @@
-learning rate: $\num[scientific-notation=true]{1.112662e-01}$, history size: $\num[scientific-notation=false]{225}$
+learning rate: $\num[scientific-notation=true]{6.048366e-01}$, history size: $\num[scientific-notation=false]{92}$, $N_{\Omega}$: $\num[scientific-notation=false]{2340}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{1507}$, batch sampling frequency: $\num[scientific-notation=false]{104}$
