--- a/kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex/best_KFAC.tex
+++ b/kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex/best_KFAC.tex
@@ -1,1 +1,1 @@
-damping: $\num[scientific-notation=true]{6.942603e-03}$, momentum: $\num[scientific-notation=true]{9.606104e-01}$, exponential moving average: $\num[scientific-notation=true]{9.574108e-01}$, initialize Kronecker factors to identity: $\text{yes}$
+damping: $\num[scientific-notation=true]{6.942603e-03}$, momentum: $\num[scientific-notation=true]{9.606104e-01}$, exponential moving average: $\num[scientific-notation=true]{9.574108e-01}$, initialize Kronecker factors to identity: $\text{yes}$, $N_{\Omega}$: $\num[scientific-notation=false]{1287}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{1774}$, batch sampling frequency: $\num[scientific-notation=false]{9871}$
