--- a/kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex/best_KFAC_auto.tex
+++ b/kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex/best_KFAC_auto.tex
@@ -1,1 +1,1 @@
-damping: $\num[scientific-notation=true]{1.639880e-12}$, exponential moving average: $\num[scientific-notation=true]{7.584987e-01}$, initialize Kronecker factors to identity: $\text{yes}$
+damping: $\num[scientific-notation=true]{1.639880e-12}$, exponential moving average: $\num[scientific-notation=true]{7.584987e-01}$, initialize Kronecker factors to identity: $\text{yes}$, $N_{\Omega}$: $\num[scientific-notation=false]{5211}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{3423}$, batch sampling frequency: $\num[scientific-notation=false]{2454}$
