--- a/kfac_pinns_exp/exp32_poisson10d_mlp_tanh_256_bayes/tex/best_HessianFree.tex
+++ b/kfac_pinns_exp/exp32_poisson10d_mlp_tanh_256_bayes/tex/best_HessianFree.tex
@@ -1,1 +1,1 @@
-curvature matrix: $\text{GGN}$, initial damping: $\num[scientific-notation=true]{1.146081e-02}$, constant damping: $\text{no}$, maximum CG iterations: $\num[scientific-notation=false]{484}$
+curvature matrix: $\text{GGN}$, initial damping: $\num[scientific-notation=true]{1.146081e-02}$, constant damping: $\text{no}$, maximum CG iterations: $\num[scientific-notation=false]{484}$, $N_{\Omega}$: $\num[scientific-notation=false]{2410}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{2448}$, batch sampling frequency: $\num[scientific-notation=false]{1311}$
