--- a/kfac_pinns_exp/exp34_poisson100d_mlp_tanh_product_bayes/tex/best_Adam.tex
+++ b/kfac_pinns_exp/exp34_poisson100d_mlp_tanh_product_bayes/tex/best_Adam.tex
@@ -1,1 +1,1 @@
-learning rate: $\num[scientific-notation=true]{7.487811e-05}$
+learning rate: $\num[scientific-notation=true]{9.276929e-05}$, $N_{\Omega}$: $\num[scientific-notation=false]{185}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{2091}$, batch sampling frequency: $\num[scientific-notation=false]{192}$
