--- a/kfac_pinns_exp/exp14_poisson_100d_weinan/tex/best_ENGD_diagonal.tex
+++ b/kfac_pinns_exp/exp14_poisson_100d_weinan/tex/best_ENGD_diagonal.tex
@@ -1,1 +1,1 @@
-damping: $\num[scientific-notation=true]{9.259607e-01}$, exponential moving average: $\num[scientific-notation=true]{8.364431e-01}$, initialize Gramian to identity: $\text{yes}$
+damping: $\num[scientific-notation=true]{9.259607e-01}$, exponential moving average: $\num[scientific-notation=true]{8.364431e-01}$, initialize Gramian to identity: $\text{yes}$, $N_{\Omega}$: $\num[scientific-notation=false]{361}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{114}$, batch sampling frequency: $\num[scientific-notation=false]{466}$
