--- a/kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex/best_LBFGS.tex
+++ b/kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex/best_LBFGS.tex
@@ -1,1 +1,1 @@
-learning rate: $\num[scientific-notation=true]{2.168467e-01}$, history size: $\num[scientific-notation=false]{182}$
+learning rate: $\num[scientific-notation=true]{1.749124e-01}$, history size: $\num[scientific-notation=false]{339}$, $N_{\Omega}$: $\num[scientific-notation=false]{5391}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{4768}$, batch sampling frequency: $\num[scientific-notation=false]{155}$
