--- a/kfac_pinns_exp/exp32_poisson10d_mlp_tanh_256_bayes/tex/best_Adam.tex
+++ b/kfac_pinns_exp/exp32_poisson10d_mlp_tanh_256_bayes/tex/best_Adam.tex
@@ -1,1 +1,1 @@
-learning rate: $\num[scientific-notation=true]{2.440738e-06}$
+learning rate: $\num[scientific-notation=true]{2.440738e-06}$, $N_{\Omega}$: $\num[scientific-notation=false]{180}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{1052}$, batch sampling frequency: $\num[scientific-notation=false]{2593}$
