--- a/kfac_pinns_exp/exp32_poisson10d_mlp_tanh_256_bayes/tex/best_KFAC_auto.tex
+++ b/kfac_pinns_exp/exp32_poisson10d_mlp_tanh_256_bayes/tex/best_KFAC_auto.tex
@@ -1,1 +1,1 @@
-damping: $\num[scientific-notation=true]{2.259489e-08}$, exponential moving average: $\num[scientific-notation=true]{3.791833e-01}$, initialize Kronecker factors to identity: $\text{yes}$
+damping: $\num[scientific-notation=true]{2.259489e-08}$, exponential moving average: $\num[scientific-notation=true]{3.791833e-01}$, initialize Kronecker factors to identity: $\text{yes}$, $N_{\Omega}$: $\num[scientific-notation=false]{2605}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{1640}$, batch sampling frequency: $\num[scientific-notation=false]{261}$
