--- a/kfac_pinns_exp/exp34_poisson100d_mlp_tanh_product_bayes/tex/best_HessianFree.tex
+++ b/kfac_pinns_exp/exp34_poisson100d_mlp_tanh_product_bayes/tex/best_HessianFree.tex
@@ -1,1 +1,1 @@
-curvature matrix: $\text{Hessian}$, initial damping: $\num[scientific-notation=true]{1.431747e-02}$, constant damping: $\text{no}$, maximum CG iterations: $\num[scientific-notation=false]{384}$
+curvature matrix: $\text{Hessian}$, initial damping: $\num[scientific-notation=true]{1.431747e-02}$, constant damping: $\text{no}$, maximum CG iterations: $\num[scientific-notation=false]{384}$, $N_{\Omega}$: $\num[scientific-notation=false]{284}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{1051}$, batch sampling frequency: $\num[scientific-notation=false]{347}$
