--- a/kfac_pinns_exp/exp34_poisson100d_mlp_tanh_product_bayes/tex/best_KFAC.tex
+++ b/kfac_pinns_exp/exp34_poisson100d_mlp_tanh_product_bayes/tex/best_KFAC.tex
@@ -1,1 +1,1 @@
-damping: $\num[scientific-notation=true]{1.006032e-04}$, momentum: $\num[scientific-notation=true]{2.188149e-01}$, exponential moving average: $\num[scientific-notation=true]{7.453736e-01}$, initialize Kronecker factors to identity: $\text{no}$
+damping: $\num[scientific-notation=true]{7.311450e-04}$, momentum: $\num[scientific-notation=true]{3.520570e-01}$, exponential moving average: $\num[scientific-notation=true]{9.043334e-01}$, initialize Kronecker factors to identity: $\text{no}$, $N_{\Omega}$: $\num[scientific-notation=false]{839}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{2324}$, batch sampling frequency: $\num[scientific-notation=false]{410}$
