--- a/kfac_pinns_exp/exp34_poisson100d_mlp_tanh_product_bayes/tex/best_KFAC_auto.tex
+++ b/kfac_pinns_exp/exp34_poisson100d_mlp_tanh_product_bayes/tex/best_KFAC_auto.tex
@@ -1,1 +1,1 @@
-damping: $\num[scientific-notation=true]{5.580384e-09}$, exponential moving average: $\num[scientific-notation=true]{4.785726e-01}$, initialize Kronecker factors to identity: $\text{yes}$
+damping: $\num[scientific-notation=true]{1.121914e-10}$, exponential moving average: $\num[scientific-notation=true]{1.336558e-01}$, initialize Kronecker factors to identity: $\text{yes}$, $N_{\Omega}$: $\num[scientific-notation=false]{777}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{2479}$, batch sampling frequency: $\num[scientific-notation=false]{11}$
