--- a/kfac_pinns_exp/exp34_poisson100d_mlp_tanh_product_bayes/tex/best_SGD.tex
+++ b/kfac_pinns_exp/exp34_poisson100d_mlp_tanh_product_bayes/tex/best_SGD.tex
@@ -1,1 +1,1 @@
-learning rate: $\num[scientific-notation=true]{1.725090e-03}$, momentum: $\num[scientific-notation=true]{9.724485e-01}$
+learning rate: $\num[scientific-notation=true]{1.725090e-03}$, momentum: $\num[scientific-notation=true]{9.724485e-01}$, $N_{\Omega}$: $\num[scientific-notation=false]{271}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{804}$, batch sampling frequency: $\num[scientific-notation=false]{987}$
